# mirror-med

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FASTER_IDEAS.md  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  smash.json  smash_recommendations.json  test_crew_reliability.py
a2a-samples/demo/ui/: main.py
a2a-samples/demo/ui/components/: agent_list.py  api_key_dialog.py  async_poller.py  chat_bubble.py  conversation.py  conversation_list.py  dialog.py  event_viewer.py  form_render.py  header.py  page_scaffold.py  poller.py  side_nav.py  task_card.py
a2a-samples/demo/ui/pages/: agent_list.py  conversation.py  event_list.py  home.py  settings.py  task_list.py
a2a-samples/demo/ui/service/: types.py
a2a-samples/demo/ui/state/: agent_state.py  host_agent_service.py  state.py
a2a-samples/demo/ui/styles/: styles.py
a2a-samples/demo/ui/utils/: agent_card.py
a2a-samples/samples/python/common/: types.py
app/: Dockerfile  pnpm-lock.yaml
app/app/src/app/: page.tsx
app/app/src/hooks/: useVisitAPI.ts
app/src/app/: layout.tsx
docs/: a2a-python-sdk.html
examples/crewai/: README.md  __init__.py  advanced_pcp_crew.py  nutrition_specialist_crew.py  pcp_specialist_crew.py
frontend/app/: fly.toml  package.json
frontend/app/app/: package.json
frontend/app/src/app/: page.tsx
src/mirror_med/: __init__.py  app.py  crew.py  crews.py  healthkit_converter.py  logging.py  logging_filters.py  settings.py
src/mirror_med/a2a/: agent_config.py  hello_executor.py
src/mirror_med/scripts/: format.py
(+133 files in other folders)
