[project]
name = "mirror-med"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "openai>=1.91.0",
    "weave>=0.51.56",
    "a2a-sdk[sqlite]>=0.2.11",
    "python-dotenv>=1.1.1",
    "crewai>=0.141.0",
    "crewai-tools>=0.51.1",
    "exa-py>=1.14.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.7.0",
    "httpx>=0.27.0",
    "docker>=7.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
mirror-med-api = "mirror_med.app:main"
format = "mirror_med.scripts.format:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["I", "F401", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
